<resources>
    <string name="app_name">TFG</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="confimPassword">Confirm password</string>
    <string name="passDontMatch">Password doesn\'t match!!</string>
    <string name="emailP">Email:</string>
    <string name="userP">User:</string>
    <string name="passwordP">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="added_user">Please verify your account by email</string>
    <string name="texttoSignUp">Make an Account</string>
    <string name="createdat">Created at:</string>
    <string name="login">Logged in!</string>
    <string name="profile">Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="passchanged">PASSWORD CHANGED!</string>
    <string name="cavatar"> Change Avatar</string>
    <string name="chavatar"> AVATAR CHANGED!!</string>
    <string name="game">Games</string>
    <string name="genre">Genres</string>
    <string name="platforms">Platforms</string>
    <string name="score">Your Score</string>
    <string name="scoreAvg">Score Average:</string>
    <string name="rated">User\'s rated:</string>
    <string name="description">Description</string>
    <string name="scoreList">Score List</string>
    <string name="nameGame">Game:</string>
    <string name="cancel">Cancel</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="loading">Loading…</string>
    <string name="logout">Logout</string>
    <string name="game_petition">Game Petition</string>
    <string name="gamePetition">Game Name</string>
    <string name="petitionSend">Petition Sent!!</string>
    <string name="most_game_voted">Most Voted Game</string>
    <string name="most_game_avg">Best Average Game</string>
    <string name="recommendation">Recommendations</string>
    <string name="recomen">You need at least rate 5 games.</string>
</resources>

