<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_cpassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/top_toolbar_user"
            layout="@layout/toolbar_top" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="100dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/TxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="150dp">


                <EditText
                    android:id="@+id/TxtCPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/confimPassword"
                    android:inputType="textPassword" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="200dp">

                <Button
                    android:id="@+id/BtnCPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/whiteSmoke"
                    android:enabled="false"
                    android:text="@string/changePassword" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/bottom_toolbar_user"
            layout="@layout/toolbar_bottom_user" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>