<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/top_toolbar_user"
            layout="@layout/toolbar_top_user" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/userP"
                    android:textColor="@color/header_line_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/TxtUser"
                    android:fontFamily="@font/roboto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="150dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/emailP"
                    android:textColor="@color/header_line_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/TxtEmail"
                    android:fontFamily="@font/roboto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="200dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/createdat"
                    android:textColor="@color/header_line_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/TxtDate"
                    android:fontFamily="@font/roboto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="250dp">

                <TextView
                    android:id="@+id/TxtCPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:onClick="goChangePassword"
                    android:text="@string/changePassword"
                    android:textColor="@color/header_line_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:orientation="horizontal"
                android:paddingTop="300dp">

                <Button
                    android:id="@+id/BtnAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:onClick="goAvatar"
                    android:text="@string/cavatar"
                    android:fontFamily="@font/roboto"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/bottom_toolbar_user"
            layout="@layout/toolbar_bottom_user" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/darker_gray">

        <include layout="@layout/menu_nav_drawer" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>