<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".game.GameView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/top_toolbar"
            layout="@layout/toolbar_top" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:textColor="@color/header_line_color"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="481dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="137dp"
            android:layout_height="368dp"
            android:orientation="horizontal">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="193dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/genre"
                        android:textAlignment="center"
                        android:textColor="@color/header_line_color"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="match_parent"
                        android:layout_height="31dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/roboto"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/platforms"
                        android:textAlignment="center"
                        android:textColor="@color/header_line_color"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/platforms"
                        android:layout_width="match_parent"
                        android:layout_height="31dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </GridLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/header_line_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="384dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/bottom_toolbar"
                layout="@layout/toolbar_bottom" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>